--- a/styles.css
+++ b/styles.css
@@ -463,7 +463,7 @@ footer{
     animation: status 4s ease forward;
 }
 
-@keyframes status{
+/* @keyframes status{
     0%{
         opacity: 1;
         pointer-events: all;
@@ -476,8 +476,43 @@ footer{
         opacity: 0;
         pointer-events: none;
     }
-}
+} */
 
+.status-success {
+    opacity: 1;
+    -moz-animation: cssAnimation 5s;
+    /* Firefox */
+    -webkit-animation: cssAnimation 5s;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 5s;
+    /* Opera */
+    animation: cssAnimation 5s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    99% {
+        opacity: 1;
+    }
+
+    50%{
+        opacity: .5;
+    }
+    75% {
+        opacity: .3;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    99% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
 
 
 
